--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,19 +1,19 @@
 version: "3"
 
 services:
-  redis:
-    container_name: "redis"
-    image: "redis:alpine"
-    restart: always
-    command: redis-server --appendonly yes --replica-read-only no
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-    ports:
-      - "6379:6379"
-    env_file:
-      - ./.env
-    volumes:
-      - ".data/redis:/data"
+  # redis:  REMOVIDO POIS VOCÊ USARÁ UM EXTERNO
+  #  container_name: "redis"
+  #  image: "redis:alpine"
+  #  restart: always
+  #  command: redis-server --appendonly yes --replica-read-only no
+  #  extra_hosts:
+  #    - "host.docker.internal:host-gateway"
+  #  ports:
+  #    - "6379:6379"
+  #  env_file:
+  #    - ./.env
+  #  volumes:
+  #    - ".data/redis:/data"
 
   # database containers, one for each db
   pg_fixPermissions:
@@ -26,38 +26,38 @@ services:
   postgres:
     image: "bitnami/postgresql:14"
     restart: always
-    container_name: "pg"
+    #container_name: "pg" REMOVIDO POIS VOCÊ USARÁ UM EXTERNO
     env_file:
       - ./.env
     extra_hosts:
       - "host.docker.internal:host-gateway"
     volumes:
       - ".data/pg:/bitnami/postgresql/data"
-    ports:
-      - "5432:5432"
+    #ports:  REMOVIDO POIS VOCÊ USARÁ UM EXTERNO
+    # - "5432:5432"
     depends_on:
       - pg_fixPermissions
 
   rabbitmq:
     image: rabbitmq:3-management
     hostname: rabbitmq
-    container_name: "rabbitmq"
+    #container_name: "rabbitmq" REMOVIDO POIS O EASYPANEL GERENCIA
     restart: always
     env_file:
       - ./.env
     volumes:
       - .data/rabbitmq/data/:/var/lib/rabbitmq/
       - .data/rabbitmq/logs/:/var/log/rabbitmq/log
-    ports:
-      - 5672:5672
-      - 15672:15672
+    #ports: REMOVIDO POIS O EASYPANEL GERENCIA
+    # - 5672:5672
+    # - 15672:15672
 
   api:
     build:
       context: .
       dockerfile: ./Dockerfile
     restart: always
-    container_name: "api"
+    #container_name: "api"  REMOVIDO POIS O EASYPANEL GERENCIA
     env_file:
       - ./.env
     stdin_open: true
@@ -65,11 +65,11 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
-      - redis
+      # - redis  REMOVIDO POIS VOCÊ USARÁ UM EXTERNO
       - postgres
       - rabbitmq
-    ports:
-      - "3100:3100"
+    #ports:  REMOVIDO POIS O EASYPANEL GERENCIA
+    # - "3100:3100"
     volumes:
       - .data/.wwebjs_auth:/app/.wwebjs_auth
       - .data/medias:/app/public
