--- a/backend/.env.example
+++ b/backend/.env.example
@@ -58,7 +58,7 @@ RABBITMQ_DEFAULT_PASS=123456
 API_URL_360=https://waba-sandbox.360dialog.io
 
 # usado para mosrar opções não disponíveis normalmente.
-ADMIN_DOMAIN=izing.io
+ADMIN_DOMAIN=natanaeleduardo.com.br
 
 # Dados para utilização do canal do facebook
 VUE_FACEBOOK_APP_ID=3237415623048660
